force-app/main/default/objects/LiveEngage__Skill__c/fields/LiveEngage__Default_Screen__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Default_Screen__c</fullName>
    <inlineHelpText>People Search (Account, Contacts, Leads), Accounts Search, Contacts Search, Leads Search, Cases Search, Opportunities Search, Custom Objects Search, All Records Search</inlineHelpText>
    <label>Default Screen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>