force-app/main/default/objects/LiveEngage__Skill__c/fields/LiveEngage__Enabled_Objects__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Enabled_Objects__c</fullName>
    <label>Enabled Objects</label>
    <type>TextArea</type>
</CustomField>