force-app/main/default/objects/LiveEngage__Skill__c/fields/LiveEngage__SDK_Msg_Search_Values4__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__SDK_Msg_Search_Values4__c</fullName>
    <label>SDK Msg Search Values 4</label>
    <type>TextArea</type>
</CustomField>