force-app/main/default/objects/LiveEngage__Skill__c/fields/LiveEngage__SDK_Search_Names2__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__SDK_Search_Names2__c</fullName>
    <label>SDK Search Names2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>