force-app/main/default/objects/LiveEngage__Skill__c/fields/LiveEngage__Use_Service_Console__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Use_Service_Console__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Service Console</label>
    <type>Checkbox</type>
</CustomField>