force-app/main/default/objects/LiveEngage__Skill__c/listViews/LiveEngage__All_Skills.listView-meta.xml
<ListView>
    <fullName>LiveEngage__All_Skills</fullName>
    <columns>NAME</columns>
    <columns>LiveEngage__Default_Screen__c</columns>
    <columns>LiveEngage__Enabled_Objects__c</columns>
    <columns>LiveEngage__SDK_Search_Names__c</columns>
    <columns>LiveEngage__Use_Service_Console__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Skills</label>
</ListView>